style.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --cornsilk: #FEFAE0;
    --earth-yellow: #DDA15E;
    --tigers-eye: #BC6C25;
    --dark-moss-green: #606C38;
    --pakistan-green: #283618;
}


html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    background-color: var(--cornsilk);
}

nav {
    width: 100%;
    height: 50px;
    border-bottom: solid 1px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-family: Poppins;
    position: fixed;
    z-index: 3;
    background-color: white;
    top: 0;
    backdrop-filter: blur;
    background: rgba( 255, 255, 255, 0.6 );
    backdrop-filter: blur( 4px );
    -webkit-backdrop-filter: blur( 4px );
}

.logo {
    display: flex;
    align-items: center;
    height: 100%;
    gap: 10px;
}

 nav .logo img {
    width: 40px;
}

a {
    text-decoration: none;
    color: black;
}

.pages {
    display: flex;
    gap: 15px;
    padding-right: 10px;
}

.logo {
    padding-left: 10px;
}
    
.logo img {
    width: 100px;
}

.heroSection {
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-image: url("/images/greenhouseMain.avif");
    display: flex;
    align-items: flex-end;
}

nav a {
    padding: 5px;
}

nav a:nth-child(3) {
    color: green;
    border: solid 1px;
    padding: 4px;
    border-radius: 15px;
    transition: 0.3s;
}

nav a:nth-child(3):hover {
    background-color: green;
    color: white;
}

nav a:hover {
    color: green;
}


.info {
    background-color: #283618;
    border-radius: 20px;
    position: relative;
    bottom: 50px;
    left: 20px;
    padding: 20px;
    font-family: Merriweather;
    color: white;
    width: 500px;
}

@media (max-width: 600px) {
    .logo p {
        display: none;
    }

    nav {
        font-size: 0.9rem;
    }

    .heroSection {
        display: flex;
        justify-content: center;
    }

    .info  {
        width: 400px;
        text-align: center;
        margin: 0;
        padding: 10px;
        margin-right: 34px;
    }
}

.info button {
    background: transparent;
    border: solid 1px;
    border-radius: 20px;
    padding: 10px;
    cursor: pointer;
    color: var(--cornsilk);
    transition: 0.3s;
}

.info button:hover {
    background-color: var(--cornsilk);
    color: #283618;
}

.plantsSection {
    background-color: var(--cornsilk);
    height: 100%;
    width: 100%;
    text-align: center;
}

.plantsSection h1 {
    position: relative;
    top: 60px;
    font-family: Merriweather;
    font-size: 3.5rem;
}

.plantGrid {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    position: relative;
    top: 80px;
    row-gap: 50px;
    place-items: center;
}

.plant {
    display: flex;
    flex-direction: column;
    gap: 10px;
    text-align: center;
    padding: 20px;
    border-radius: 10px;
    transition: 300ms;
    cursor: pointer;
}

.plant:hover {
    background-color: var(--earth-yellow);
}

.plantImg {
    background-color: var(--pakistan-green);
    height: 400px;

}

.plantName {
    font-size: 1.2rem;
}

.plantImg {
    background-image: url("/images/capellaCoralPetunia.jpg");
    background-size: cover ;
}

.plant {
    font-family: Merriweather;
}

.plantInfo {
    font-style: italic;
}

.plantImg, .plantInfo, .plantName {
    width: 250px;
}

.plantInfo, .plantName {
    margin: 0;
}

.plant:nth-child(1) .plantImg {
    background-image: url("/images/capellaCoralPetunia.jpg");
}

.plant:nth-child(2) .plantImg {
    background-image: url("/images/yellowCalibrachoa.jpg");
}


.plant:nth-child(3) .plantImg {
    background-image: url("/images/neonPinkCalibrochoa.jpg");
}

.plant:nth-child(4) .plantImg {
    background-image: url("/images/calibrachoaWhite.jpg");
}

.plant:nth-child(5) .plantImg {
    background-image: url("/images/colues.jfif");
}
.plant:nth-child(6) .plantImg {
    background-image: url("/images/cuphea_hummingbirds_lunch.webp");
}
.plant:nth-child(7) .plantImg {
    background-image: url("/images/Amore-Heart-and-Soul-Danziger-1.jpg");
}
.plant:nth-child(8) .plantImg {
    background-image: url("/images/Fuchsia-Blue-Eyes-Web-4.jpg");
}


footer {
    background-color: #2F2D2D;
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    font-family: Merriweather;
    height: 220px;
}

.MTLogo img {
    width: 180px;
}

footer ul {
    list-style: none;
}

footer ul li:nth-child(1) {
    font-size: 1.4rem;
    font-weight: bold;
    margin-bottom: 5px;
}

footer li:not(li:nth-child(1)) {
    cursor: pointer;
}

@media (max-width: 800px) {
    
    footer {
        font-size: 0.8rem;
    }

    footer ul li:nth-child(1) {
        font-size: 1.2rem;
    }

    .MTLogo img {
        width: 120px;
        /* hello */
    }
}

